--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.3",
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
