--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "react": "^18.1.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
